注释添加及业务列表框进度状态显示

--- a/src/main/resources/templates/business.html
+++ b/src/main/resources/templates/business.html
@@ -306,6 +306,7 @@
                     , {field: 'applicantCode', title: '申请号', width: 160}
                     , {field: 'applicantTime', title: '申请时间', width: 160}
                     , {field: 'businessName', title: '业务名', width: 160}
+                    , {field: 'status', title: '状态', width: 120}
                     , {field: 'businessTopType', title: '业务类型', width: 100,}
                     , {field: 'businessSecondType', title: '业务种类', width: 160}
                     , {field: 'trademarkType', title: '商标类型', width: 200}
